--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,11 @@ add_executable(RhombicSweep ${SOURCE_FILES})
 # Include my files and boost
 include_directories(src)
 # find_package(Boost REQUIRED)
-# nclude_directories(${Boost_INCLUDE_DIRS})
+# include_directories(${Boost_INCLUDE_DIRS})
+include_directories(include/pcg-cpp-0.98/include)
 
 # Link to my library
-set(LIB_FILES src/lattice.h src/lattice.cpp)
+set(LIB_FILES src/lattice.h src/lattice.cpp src/code.h src/code.cpp)
 add_library(SweepLib ${LIB_FILES})
 target_link_libraries(RhombicSweep SweepLib)
 
@@ -38,14 +39,18 @@ if (test)
     add_subdirectory(tests/lib/googletest-release-1.8.0/googletest)
     # Include googletest libraries
     include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} src)
-    # Add test executable
-    add_executable(testRhombicSweep tests/test_lattice.cpp)
+    # Add test executables
+    add_executable(testLattice tests/test_lattice.cpp)
+    add_executable(testCode tests/test_code.cpp)
     # Standard googletest linking
-    target_link_libraries(testRhombicSweep gtest gtest_main)
+    target_link_libraries(testLattice gtest gtest_main)
+    target_link_libraries(testCode gtest gtest_main)
     # Link to my library
-    target_link_libraries(testRhombicSweep SweepLib)
+    target_link_libraries(testLattice SweepLib)
+    target_link_libraries(testCode SweepLib)
     # Enable running tests with 'make test'
-    add_test(NAME testRhombicSweep COMMAND testRhombicSweep)
+    add_test(NAME testLattice COMMAND testLattice)
+    add_test(NAME testCode COMMAND testCode)
 endif()
 
 # Check compiler flags
