Boundary case almost done except for sweep adaptations for w=0 vertices.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,22 +50,26 @@ if (test)
     add_executable(testLattice tests/test_lattice.cpp)
     add_executable(testRhombicToricLattice tests/test_rhombicToricLattice.cpp)
     add_executable(testRhombicLattice tests/test_rhombicLattice.cpp)
-    add_executable(testCode tests/test_code.cpp)
+    add_executable(testCodeToric tests/test_code_toric.cpp)
+    add_executable(testCodeBoundaries tests/test_code_boundaries.cpp)
     # Standard googletest linking
     target_link_libraries(testLattice gtest gtest_main)
     target_link_libraries(testRhombicToricLattice gtest gtest_main)
     target_link_libraries(testRhombicLattice gtest gtest_main)
-    target_link_libraries(testCode gtest gtest_main)
+    target_link_libraries(testCodeToric gtest gtest_main)
+    target_link_libraries(testCodeBoundaries gtest gtest_main)
     # Link to my library
     target_link_libraries(testLattice SweepLib)
     target_link_libraries(testRhombicToricLattice SweepLib)
     target_link_libraries(testRhombicLattice SweepLib)
-    target_link_libraries(testCode SweepLib)
+    target_link_libraries(testCodeToric SweepLib)
+    target_link_libraries(testCodeBoundaries SweepLib)
     # Enable running tests with 'make test'
     add_test(NAME testLattice COMMAND testLattice)
     add_test(NAME testRhombicToricLattice COMMAND testRhombicToricLattice)
     add_test(NAME testRhombicLattice COMMAND testRhombicLattice)
-    add_test(NAME testCode COMMAND testCode)
+    add_test(NAME testCodeToric COMMAND testCodeToric)
+    add_test(NAME testCodeBoundaries COMMAND testCodeBoundaries)
 endif()
 
 if (profile)
