--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ include_directories(include/pcg-cpp-0.98/include)
 set(LIB_FILES src/lattice.h src/lattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/rhombicToricLattice.h src/rhombicToricLattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/rhombicLattice.h src/rhombicLattice.cpp)
+set(LIB_FILES ${LIB_FILES} src/cubicLattice.h src/cubicLattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/code.h src/code.cpp)
 set(LIB_FILES ${LIB_FILES} src/decoder.h)
 add_library(SweepLib ${LIB_FILES})
@@ -50,24 +51,28 @@ if (test)
     add_executable(testLattice tests/test_lattice.cpp)
     add_executable(testRhombicToricLattice tests/test_rhombicToricLattice.cpp)
     add_executable(testRhombicLattice tests/test_rhombicLattice.cpp)
+    add_executable(testCubicLattice tests/test_cubicLattice.cpp)
     add_executable(testCodeToric tests/test_code_toric.cpp)
     add_executable(testCodeBoundaries tests/test_code_boundaries.cpp)
     # Standard googletest linking
     target_link_libraries(testLattice gtest gtest_main)
     target_link_libraries(testRhombicToricLattice gtest gtest_main)
     target_link_libraries(testRhombicLattice gtest gtest_main)
+    target_link_libraries(testCubicLattice gtest gtest_main)
     target_link_libraries(testCodeToric gtest gtest_main)
     target_link_libraries(testCodeBoundaries gtest gtest_main)
     # Link to my library
     target_link_libraries(testLattice SweepLib)
     target_link_libraries(testRhombicToricLattice SweepLib)
     target_link_libraries(testRhombicLattice SweepLib)
+    target_link_libraries(testCubicLattice SweepLib)
     target_link_libraries(testCodeToric SweepLib)
     target_link_libraries(testCodeBoundaries SweepLib)
     # Enable running tests with 'make test'
     add_test(NAME testLattice COMMAND testLattice)
     add_test(NAME testRhombicToricLattice COMMAND testRhombicToricLattice)
     add_test(NAME testRhombicLattice COMMAND testRhombicLattice)
+    add_test(NAME testCubicLattice COMMAND testCubicLattice)
     add_test(NAME testCodeToric COMMAND testCodeToric)
     add_test(NAME testCodeBoundaries COMMAND testCodeBoundaries)
 endif()
