Added sweep limit, sweep schedule and timeout as arguments & finished test renanimg.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,8 +52,8 @@ if (test)
     add_executable(testRhombicToricLattice tests/test_rhombicToricLattice.cpp)
     add_executable(testRhombicLattice tests/test_rhombicLattice.cpp)
     add_executable(testCubicLattice tests/test_cubicLattice.cpp)
-    add_executable(testCodeToric tests/test_code_toric.cpp)
-    add_executable(testCodeBoundaries tests/test_code_boundaries.cpp)
+    add_executable(testCodeToric tests/test_code_rhombic_toric.cpp)
+    add_executable(testCodeBoundaries tests/test_code_rhombic_boundaries.cpp)
     # Standard googletest linking
     target_link_libraries(testLattice gtest gtest_main)
     target_link_libraries(testRhombicToricLattice gtest gtest_main)
