Split Code class into abstract class Code and derived class RhombicCode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set(LIB_FILES ${LIB_FILES} src/rhombicToricLattice.h src/rhombicToricLattice.cpp
 set(LIB_FILES ${LIB_FILES} src/rhombicLattice.h src/rhombicLattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/cubicLattice.h src/cubicLattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/code.h src/code.cpp)
+set(LIB_FILES ${LIB_FILES} src/rhombicCode.h src/rhombicCode.cpp)
 set(LIB_FILES ${LIB_FILES} src/decoder.h)
 add_library(SweepLib ${LIB_FILES})
 target_link_libraries(RhombicSweep SweepLib)
@@ -52,29 +53,29 @@ if (test)
     add_executable(testRhombicToricLattice tests/test_rhombicToricLattice.cpp)
     add_executable(testRhombicLattice tests/test_rhombicLattice.cpp)
     add_executable(testCubicLattice tests/test_cubicLattice.cpp)
-    add_executable(testCodeToric tests/test_code_rhombic_toric.cpp)
-    add_executable(testCodeBoundaries tests/test_code_rhombic_boundaries.cpp)
+    add_executable(testRhombicCodeToric tests/test_rhombicCode_toric.cpp)
+    add_executable(testRhombicCodeBoundaries tests/test_rhombicCode_boundaries.cpp)
     # Standard googletest linking
     target_link_libraries(testLattice gtest gtest_main)
     target_link_libraries(testRhombicToricLattice gtest gtest_main)
     target_link_libraries(testRhombicLattice gtest gtest_main)
     target_link_libraries(testCubicLattice gtest gtest_main)
-    target_link_libraries(testCodeToric gtest gtest_main)
-    target_link_libraries(testCodeBoundaries gtest gtest_main)
+    target_link_libraries(testRhombicCodeToric gtest gtest_main)
+    target_link_libraries(testRhombicCodeBoundaries gtest gtest_main)
     # Link to my library
     target_link_libraries(testLattice SweepLib)
     target_link_libraries(testRhombicToricLattice SweepLib)
     target_link_libraries(testRhombicLattice SweepLib)
     target_link_libraries(testCubicLattice SweepLib)
-    target_link_libraries(testCodeToric SweepLib)
-    target_link_libraries(testCodeBoundaries SweepLib)
+    target_link_libraries(testRhombicCodeToric SweepLib)
+    target_link_libraries(testRhombicCodeBoundaries SweepLib)
     # Enable running tests with 'make test'
     add_test(NAME testLattice COMMAND testLattice)
     add_test(NAME testRhombicToricLattice COMMAND testRhombicToricLattice)
     add_test(NAME testRhombicLattice COMMAND testRhombicLattice)
     add_test(NAME testCubicLattice COMMAND testCubicLattice)
-    add_test(NAME testCodeToric COMMAND testCodeToric)
-    add_test(NAME testCodeBoundaries COMMAND testCodeBoundaries)
+    add_test(NAME testRhombicCodeToric COMMAND testRhombicCodeToric)
+    add_test(NAME testRhombicCodeBoundaries COMMAND testRhombicCodeBoundaries)
 endif()
 
 if (profile)
