--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,13 @@ endif()
 
 # Turn on with 'cmake -Dtest=ON'
 option(test "Build all tests." OFF)
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(test ON)
-endif()
-
 # Turn on with 'cmake -Dprofile=ON'
 option(profile "Profile using grpof")
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(test ON)
+    # set(profile ON)
+endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
@@ -32,9 +33,11 @@ include_directories(include/pcg-cpp-0.98/include)
 set(LIB_FILES src/lattice.h src/lattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/rhombicToricLattice.h src/rhombicToricLattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/rhombicLattice.h src/rhombicLattice.cpp)
+set(LIB_FILES ${LIB_FILES} src/cubicToricLattice.h src/cubicToricLattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/cubicLattice.h src/cubicLattice.cpp)
 set(LIB_FILES ${LIB_FILES} src/code.h src/code.cpp)
 set(LIB_FILES ${LIB_FILES} src/rhombicCode.h src/rhombicCode.cpp)
+set(LIB_FILES ${LIB_FILES} src/cubicCode.h src/cubicCode.cpp)
 set(LIB_FILES ${LIB_FILES} src/decoder.h)
 add_library(SweepLib ${LIB_FILES})
 target_link_libraries(RhombicSweep SweepLib)
@@ -42,6 +45,7 @@ target_link_libraries(RhombicSweep SweepLib)
 if (test)
     enable_testing()
     add_definitions(-DSCTEST)
+    include(CTest)
     # Add my tests
     add_subdirectory(tests)
     # Add googletest
@@ -55,6 +59,7 @@ if (test)
     add_executable(testCubicLattice tests/test_cubicLattice.cpp)
     add_executable(testRhombicCodeToric tests/test_rhombicCode_toric.cpp)
     add_executable(testRhombicCodeBoundaries tests/test_rhombicCode_boundaries.cpp)
+    add_executable(testCubicCodeBoundaries tests/test_cubicCode_boundaries.cpp)
     # Standard googletest linking
     target_link_libraries(testLattice gtest gtest_main)
     target_link_libraries(testRhombicToricLattice gtest gtest_main)
@@ -62,6 +67,7 @@ if (test)
     target_link_libraries(testCubicLattice gtest gtest_main)
     target_link_libraries(testRhombicCodeToric gtest gtest_main)
     target_link_libraries(testRhombicCodeBoundaries gtest gtest_main)
+    target_link_libraries(testCubicCodeBoundaries gtest gtest_main)
     # Link to my library
     target_link_libraries(testLattice SweepLib)
     target_link_libraries(testRhombicToricLattice SweepLib)
@@ -69,6 +75,7 @@ if (test)
     target_link_libraries(testCubicLattice SweepLib)
     target_link_libraries(testRhombicCodeToric SweepLib)
     target_link_libraries(testRhombicCodeBoundaries SweepLib)
+    target_link_libraries(testCubicCodeBoundaries SweepLib)
     # Enable running tests with 'make test'
     add_test(NAME testLattice COMMAND testLattice)
     add_test(NAME testRhombicToricLattice COMMAND testRhombicToricLattice)
@@ -76,13 +83,12 @@ if (test)
     add_test(NAME testCubicLattice COMMAND testCubicLattice)
     add_test(NAME testRhombicCodeToric COMMAND testRhombicCodeToric)
     add_test(NAME testRhombicCodeBoundaries COMMAND testRhombicCodeBoundaries)
+    add_test(NAME testCubicCodeBoundaries COMMAND testCubicCodeBoundaries)
 endif()
 
 if (profile)
     SET(GCC_PROFILE_COMPILE_FLAGS "-pg")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_PROFILE_COMPILE_FLAGS}")
+    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
+    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
 endif()
-
-# Check compiler flags
-# message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
-# message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
